--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -65,6 +65,8 @@
 \def\aapr{Astron.~\& Astrophys.~Reviews}
 \def\physrep{Physics Reports}
 \def\apss{Ap\&SS}
+\def\jcap{J.~Cosmology Astropart.~Phys.} % Journal of Cosmology and Astroparticle Physics
+
 
 
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
@@ -209,81 +211,82 @@ Until recently, black-hole X-ray binaries with dynamical mass measurements provi
 
 \subsubsection{Other electromagnetic black hole mass measurements} \label{sec:lensing}
 
-Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes with lower limit mass measurements in detached binaries observed in a globular cluster \citep{Giesers:2019}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
+\textbf{Detached binaries:} Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes with lower limit mass measurements in detached binaries observed in a globular cluster \citep{Giesers:2019}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
 
-Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
+\textbf{Microlensing:} Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
 
-Finally, it is worth remembering that all observations are likely to suffer from a range of selection effects.  These could be Malmquist biases which favour observations of the brightest or loudest sources, such as the enhanced detectability of more massive binaries in gravitational-wave data or of more rapidly accreting X-ray binaries (though see \citet{HiraiMandel:2021}, who point out that more complex detectability thresholds related to wind morphology may be relevant for high-mass X-ray binaries).  Alternatively, they could be evolutionary selection effects which can skew the observed populations; for example, X-ray binaries may contain few low-mass black holes, creating an impression of a mass gap between neutron star and black hole masses, if low-mass black holes get larger natal kicks that tend to disrupt binaries \citep{Mandel:2020}.
+\textbf{Selection effects:} Finally, it is worth remembering that all observations are likely to suffer from a range of selection effects.  These could be Malmquist biases which favour observations of the brightest or loudest sources, such as the enhanced detectability of more massive binaries in gravitational-wave data or of more rapidly accreting X-ray binaries (though see \citet{HiraiMandel:2021}, who point out that more complex detectability thresholds related to wind morphology may be relevant for high-mass X-ray binaries).  Alternatively, they could be evolutionary selection effects which can skew the observed populations; for example, X-ray binaries may contain few low-mass black holes, creating an impression of a mass gap between neutron star and black hole masses, if low-mass black holes get larger natal kicks that tend to disrupt binaries \citep{Mandel:2020}.
 
 
 \section{Formation scenarios}\label{form}
 
-When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star: there was already observational evidence for merging double neutron stars in the Galaxy (starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}), but there was no direct evidence for merging binary black holes. Some were even more surprised by the high black\ilya{-}hole masses, in excess of the observed black\ilya{-}hole masses in X-ray binaries. Was this surprise justified? And should we be perplexed by the spin or mass ratio measurements for the gravitational-wave sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational-wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather startling that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we discuss the ways in which gravitational-wave observations might be used to distinguish them.
+When the detection of GW150914 was first announced, many were surprised that it was a binary black hole rather than a binary neutron star: there was already observational evidence for merging double neutron stars in the Galaxy (starting with the Hulse-Taylor binary pulsar \citep{HulseTaylor:1975}), but there was no direct evidence for merging binary black holes. Some were even more surprised by the high black-hole masses, in excess of the observed black-hole masses in X-ray binaries. Was this surprise justified? And should we be perplexed by the spin or mass ratio measurements for the gravitational-wave sources? Before answering these questions, we should first discuss how these merging compact binaries come into existence. In fact, this is one of the key outstanding questions that gravitational-wave observations will help us to answer. Below, we explain why -- on the face of it -- it is rather startling that compact massive binaries exist at all. We then describe the leading candidate formation channels, and in the next section we discuss the ways in which gravitational-wave observations might be used to distinguish them.
 
 
-\subsection{The \ilya{Orbital} Separation Question}
+\subsection{The Orbital Separation Question}
 
 
-\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two \ilya{$\sim 30 M_\odot$} black holes responsible for GW150914, the initial separation must have been less than $\sim 50 R_\odot$ -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
+\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two $\sim 30 M_\odot$ black holes responsible for GW150914, the initial separation must have been less than $\sim 50 R_\odot$ -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
 
 
-\textbf{But the black holes' parent stars \ilya{cannot} get so close.} Stars expand as they evolve. Even our Sun will reach roughly an astronomical unit in size during its giant phase; the stars (above $\sim 20 M_\odot$  at birth) that leave behind black holes may reach thousands of solar radii at their maximal extent. The maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. \ilya{There appears to be} a problem. If the parent stars begin life at separations from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and we might therefore expect that they would merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times the age of the universe to merge. In either case, no gravitational-wave sources would exist today. 
+\textbf{But the black holes' parent stars cannot get so close.} Stars expand as they evolve. Even our Sun will reach roughly an astronomical unit in size during its giant phase; the stars that leave behind black holes (above $\sim 20 M_\odot$  at birth) may reach thousands of solar radii at their maximal extent. The maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. There appears to be a problem. If the parent stars begin life in a close binary with a separation from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and we might therefore expect that they would merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times longer than the age of the Universe to merge. In either case, no gravitational-wave sources would exist today. 
 
 \textbf{The problem is already there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernovae, even the initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black `Roche Lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This size is smaller than the zero-age main sequence radius for all stellar masses shown in the figure: the separation problem thus exists even without accounting for the exacerbating factors of stellar expansion or binary widening through mass loss.
 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.5\textwidth]{M-rp-log.png}
+	\includegraphics[width=0.8\textwidth]{M-rp-log.png}
 	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within the age of the Universe through gravitational-wave emission, for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down.\label{fig:periapsis}}
 \end{figure}
 	
 \begin{figure}
 	\centering	
-	\includegraphics[width=0.5\textwidth]{StellarRadiusZsolarRoche.png}
-\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{Stevenson:2017}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
+	\includegraphics[width=0.8\textwidth]{StellarRadiusZsolarRoche.png}
+\caption{Maximal stellar extent at solar metallicity during various phases of stellar evolution for a non-rotating star with a given initial mass; based on the implementation of single stellar evolution models of \citet{Hurley:2000} in the COMPAS binary population synthesis code \citep{COMPAS:2021}.   The star expands from its zero-age main sequence (ZAMS) size onwards through the main sequence (MS), Hertzsprung gap (HG), core Helium burning (CHeB) stages, and the asymptotic giant branch (AGB) for lower-mass stars.  The Roche lobe radius (maximal stellar size beyond which a star would engage in mass transfer \citep{Eggleton:1983}) is plotted for an equal mass circular binary which would have the maximum separation to allow a merger within the age of the Universe (see \autoref{fig:periapsis}) assuming initial mass to compact object mass conversion as in \autoref{fig:BHremnant}.\label{fig:Rmax} }
 \end{figure}
 
-\textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers do not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
+\textbf{So then why do the gravitational-wave sources exist at all?} Given the above, one might conclude that gravitational-wave driven compact binary mergers should not exist. Yet their existence and detection were expected \citep{ratesdoc}. In fact, \citet{Dyson:1962} conjectured about the existence of merging neutron star binaries even before the first neutron star was observed; \citet{Tutukov:1973} predicted that binary compact objects must naturally (albeit rarely, and at wide separations in their model) form as a result of massive binary evolution; \citet{vdHDeLoore:1973} argued that tight high-mass X-ray binaries -- progenitors of compact object binaries -- must also form; and the Hulse--Taylor binary pulsar \citep{HulseTaylor:1975} demonstrated the existence of binary compact objects that would merge within the age of the Universe \citep[for early explanations of its formation in the context of binary evolution, see][]{FlanneryvdH:1975,DeLoore:1975}.
 
-Three leading formation scenarios have been proposed for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars not born in the same binary. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black\ilya{-}hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
+Three leading formation scenarios have been proposed for merging compact-object binaries: (i) finely tuned binary evolution that brings the stars closer as they expand and interact; (ii) finely tuned stellar evolution that prevents the parent stars from expanding at all; and (iii) assembly of a close binary from black holes that formed from stars not born in the same binary. Contrived as these scenarios sound, all three might plausibly contribute to the production of binary black hole mergers.  And as we'll see in \autoref{merge}, only a small fraction of stars, of order one in a million, need to end up in merging black-hole binaries in order to explain the observed merger rates: even quite unusual or (apparently) finely tuned evolutionary pathways could therefore be viable candidates.
 
-We explore the three leading formation scenarios in more detail below, as well as the possibility that some combination of these effects may occur on the way to merger. We \ilya{will not} discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} \ilya{(\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture)} or non-astrophysical formation scenarios such as primordial black holes of cosmological origin \citep[e.g.,][]{Bird:2016}.
+We explore the three leading formation scenarios in more detail below, as well as the possibility that some combination of these effects may occur on the way to merger. We will not discuss some of the more exotic proposed mechanisms, such as the fragmentation of a single stellar core into two black holes \citep{Loeb:2016} {(\citet{Woosley:2016} and \citet{Dai:2017} discuss the problems with this picture).  
+
 
 \subsection{The Candidate Formation Scenarios}
 \subsubsection{Coming closer later in life: classical isolated binary evolution via the common-envelope phase}
 \label{form:isol}
 
-The first possible channel is perhaps the most studied one, placing merging black\ilya{-}hole binaries in the same framework as other very close binaries (such as cataclysmic variables) in which at least one of the stars has extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}. 
+The first possible channel is perhaps the most studied one, placing merging black-hole binaries in the same framework as other very close binaries (such as cataclysmic variables) in which at least one of the stars has extended beyond the binary's current orbital separation during an earlier stage of its evolution \citep[e.g.,][]{Paczynski:1976}. 
 
-In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase; see \citet{Ivanova:2013} for a review. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analyzing the evolutionary history of the Hulse--Taylor binary pulsar. The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2003,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarizing all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
+In this scenario the two stars are born in a relatively wide binary, allowing them space to expand.  However, at a critical moment in its evolution, the binary is tightened by a factor of two or more orders of magnitude through dynamically unstable mass transfer, known as a common envelope phase; see \citet{Ivanova:2013} for a review. The resulting tight binary may then be close enough to merge through gravitational-wave emission.  \citet{SmarrBlandford:1976} may have been the first to explicitly point to this channel in the context of compact object binary formation when analyzing the evolutionary history of the Hulse--Taylor binary pulsar. The channel has been studied at length over the past 40 years, with significant contributions from \citet{TutukovYungelson:1993,Lipunov:1997,BetheBrown:1998,Nelemans:2001,VossTauris:2003,Pfahl:2005,Dewi:2006,Kalogera:2007,OShaughnessy:2008,Dominik:2012,Belczynski:2016,EldridgeStanway:2016} and many others. Rather than summarising all of the steps and challenges in our understanding of massive binary evolution (see the papers above and the review by \citet{PostnovYungelson:2014} for details), we provide a schematic outline of an evolutionary scenario that leads to the formation of a GW150914-like merging system.
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.45\textwidth]{channel1.png}
-	\caption{\label{fig:isol_binary} A sketch of merging black\ilya{-}hole binary formation through isolated binary evolution via the common envelope phase.}
+	\caption{\label{fig:isol_binary} A sketch of merging black-hole binary formation through isolated binary evolution via the common envelope phase.}
 \end{figure}
 
-\ilya{An example of the} evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}, and the steps below follow the panels in that figure:
+An example of the evolution of this system is sketched out in a van den Heuvel -- style diagram in \autoref{fig:isol_binary}, and the steps below follow the panels in that figure:
 \begin{enumerate}  
-\item[a.] Two massive stars of perhaps $100$ and $75$ $M_{\odot}$ are born in a low-metallicity environment ($\sim 5\%$ of solar metallicity)  binary at a separation of $\sim 10$ AU.  
-\item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass on to the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
+\item[a.] Two massive stars of perhaps $100$ and $75$ $M_{\odot}$ are born in a binary at a separation of $\sim 10$ AU in a low-metallicity environment ($\sim 5\%$ of solar metallicity).  
+\item[b.] The more massive primary reaches the end of its main sequence evolution first.  At this stage, it has completed fusing hydrogen into helium in its core, and with the loss of energy input, the core begins to contract.  The associated release of gravitational binding energy and the eventual onset of hydrogen shell burning cause the hydrogen-rich envelope to expand.  For a sufficiently close binary, the primary expands past the equipotential surface known as the Roche Lobe and begins to transfer mass onto the secondary.  The mass transfer proceeds on the thermal timescale of the primary donor and could be significantly non-conservative, as the less evolved secondary, with its correspondingly longer thermal timescale, is unable to accept mass at the rate at which it is being donated.  The loss of mass from the binary, in addition to wind-driven mass loss, can widen the system to perhaps $\sim 20$ AU.  
 \item[c.] The primary loses its entire envelope, leaving behind a naked helium-burning star -- a Wolf-Rayet star.  
 \item[d.] Following wind-driven mass loss, which further widens the system, the primary collapses into a black hole; here, this collapse is assumed to be complete, without an associated natal kick.  
-\item[e.] When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova (if the fallback is not complete).  The mass transfer on to the black hole would need to be almost wholly non-conservative if the accretion obeys the Eddington limit, which corresponds to an equilibrium between gravity and the pressure on infalling material of the radiation released during accretion.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor as it loses mass.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
+\item[e.] When, a few hundred thousand years later, the secondary reaches the end of its main sequence, the process repeats in reverse: the secondary expands until it commences mass transfer onto the primary.  By this time, the primary has lost around two thirds of its initial mass through a combination of envelope stripping, winds, and possible mass loss during a supernova (if the fallback is not complete).  The mass transfer on to the black hole would need to be almost wholly non-conservative if the accretion obeys the Eddington limit, which corresponds to an equilibrium between gravity and the pressure of the radiation released during accretion on infalling material.  Consequently, mass transfer would lead to a rapid hardening of the binary at a rate that is faster than the reduction in the size of the secondary donor as it loses mass.  As a result, the more mass it donates, the more the donor overflows its Roche lobe.  
 \item[f.] This runaway process of dynamically unstable mass transfer leads to the formation of a common envelope of gas (from the donor's envelope) around the binary.  The drag force on the black hole from the envelope leads to rapid spiral-in.   The dissipated orbital energy is deposited in the envelope, and may ultimately lead to the expulsion of the envelope.  
-\item[g.] The orbital energy is decreased by an amount necessary to unbind the envelope, and the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  
-\item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black\ilya{-}hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
+\item[g.] After the expulsion of the common envelope, the resulting black hole -- Wolf-Rayet binary has a separation of only $\sim 35 R_\odot$ in this example.  
+\item[h.] Following further wind-driven mass loss from the secondary and its collapse into a black hole, the black-hole binary is formed.  While this entire process takes only a few million years from the formation of a stellar binary to the formation of a binary black hole, the subsequent inspiral through gravitational-wave emission will last for around 10 billion years before merger.
 \end{enumerate}
 
-Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Repetto:2012,Mandel:2015kicks}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Dewi:2006}; and the role of dynamically stable non-conservative mass transfer onto a lower-mass compact donor in achieving sufficient binary hardening  \citep{vandenHeuvel:2017,Neijssel:2018}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
+Of course, this relatively simple picture holds many uncertainties: the rate of mass loss through winds, particularly during specific stellar evolutionary phases such as from luminous blue variables \citep[massive supergiant stars with significant outbursts and eruptions and associated rapid mass loss,][]{Mennekens:2014}  and its dependence on metallicity; the fraction of the donated mass that is added to the accretor during stable mass transfer \citep{KippenhahnMeyerHofmeister:1977} and the specific angular momentum of the mass that is removed from the binary; the response of a star to mass loss and the onset of a common envelope phase \citep{Pavlovskii:2017}; common-envelope survival and the amount of binary hardening associated with the envelope ejection \citep[e.g.,][]{Kruckow:2016,Klencki:2020convective,Fragos:2019,LawSmith:2020}; supernova fallback and natal kicks for black holes \citep[e.g.,][]{Fryer:2012,Repetto:2012,Mandel:2015kicks,Mueller:2020}; the possibility of double-core common envelopes when unstable mass transfer is initiated between two evolved stars \citep{BetheBrown:1998,Dewi:2006}; and the amount of mass that can be accreted onto a black hole \citep{Eldridge:2017,Bavera:2020,vanSon:2020}.  Moreover, some isolated binaries could form merging binary black holes entirely through dynamically stable mass transfer, with sufficient binary hardening achieved by non-conservative mass transfer onto a lower-mass compact donor rather than a common-envelope event \citep{vandenHeuvel:2017,Pavlovskii:2017,Neijssel:2018,vanSon:2021}.  We will discuss the possibilities of addressing some of these with future gravitational-wave observations in \autoref{prospect}.
 
 \subsubsection{Abracadabra, thou shalt not expand: chemically homogeneous evolution}\label{sec:CHE}
 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel2.png}
-	\caption{\label{fig:chem_homog} A sketch of merging black\ilya{-}hole binary formation via the chemically homogeneous evolution channel.}
+	\caption{\label{fig:chem_homog} A sketch of merging black-hole binary formation via the chemically homogeneous evolution channel.}
 \end{figure}
 
 What if some types of massive stars did not expand and converted most of their mass into a black hole? A massive binary could then start out at an orbital period of a couple of days, close enough that if the stars produced black holes in situ they would merge within the age of the Universe through gravitational-wave emission. Without an expansion phase, the parent stars would be in no danger of merger; if almost all of the star's mass was converted into a black hole rather than the $\sim$30--50\% of the mass which typically becomes the helium core (see \autoref{fig:BHremnant}), the merger timescale would shrink for a given separation, lifting the Roche lobe radius curve in \autoref{fig:Rmax} and removing the ``separation problem at birth''.  No fine-tuning of binary evolution would then be required to construct a plausible formation scenario for tight black-hole binaries.  This scenario does, however, require some unproven assumptions regarding stellar evolution. But it may be the case that high-mass, low-metallicity stars in close binaries behave exactly as needed for this scenario to work.
@@ -302,7 +305,7 @@ This evolutionary pathway is sketched out in \autoref{fig:chem_homog}:
 \begin{figure}
 	\centering
 	\includegraphics[width=0.4\textwidth]{channel3.png}
-	\caption{\label{fig:dynamical} A sketch of merging black\ilya{-}hole binary formation via the dynamical evolution channel.}
+	\caption{\label{fig:dynamical} A sketch of merging black-hole binary formation via the dynamical evolution channel.}
 \end{figure}
 
 The last possibility we will describe is that the merging black holes may not have formed in the same binary at all.  Instead they formed from the collapse of independent massive stars (perhaps single, or each in its own separate binary), but were then introduced to each other by a matchmaker, or rather a whole array of matchmakers.   This evolution is illustrated in \autoref{fig:dynamical}: 
@@ -323,6 +326,7 @@ Hierarchical triple systems, with a tight inner binary and a third companion on 
 
 When the outer binary's orbit is $\gtrsim 5$ times wider than the inner orbit, the triple will be stable (though it may still be driven to instability by mass loss \citep[e.g.,][]{PeretsKratter:2012}).  If the inner and outer orbits in a stable triple have a high relative inclination angle, the transfer of angular momentum between these orbits can increase the eccentricity of the inner binary while keeping its semi-major axis roughly constant. For suitable initial conditions, these Lidov-Kozai oscillations in eccentricity and orbital inclination \citep{Lidov:1962,Kozai:1962} may lead to a drastic growth in the inner binary's eccentricity \citep[for a review, see][]{Naoz:2016}, reducing the binary's periapsis to the point where gravitational-wave emission can harden the binary to merger.  Recent arguments that Lidov-Kozai cycles could contribute to binary black hole mergers include \citet{SilsbeeTremaine:2017} who explored isolated triples, \citet{Antonini:2016} in the context of dynamically formed triples in globular clusters, and \citet{Hoang:2018} who considered triples with a galactic-center massive black hole as the outer companion.
 
+\textbf{Primordial black holes:}  So far, we discussed black holes of astrophysical origin.   Mergers of primordial black holes formed through the collapse of early-Universe density perturbations have been proposed as sources of gravitational waves \citep{Bird:2016}.   The contribution of primordial black hole mergers to the observed population of gravitational-wave signals is sensitive to the masses of primordial black holes, the total fraction of dark matter they comprise, their initial distribution in binaries or small clusters, and the possibility of gas accretion onto primordial black holes \citep{AliHaimoud:2017, ChenHuang:2018, Korol:2019, DeLuca:2020b, DeLuca:2020a}.
 
 \section{Expected properties of merging systems}\label{merge}
 
@@ -386,6 +390,7 @@ Some single black holes will be ejected from the cluster during the three-body i
 Following such a 3-body interaction, the binary itself must recoil in the opposite direction from the ejected single star (to conserve momentum). Although this recoil velocity is reduced by the ratio of the binary's mass to the interloper mass --- typically greater than $2:1$, as the lightest body is ejected --- the binary may still be ejected from the cluster before it is sufficiently tight to merge through radiation reaction alone.
 \item[3.] If most mergers happen soon after globular cluster formation, the local merger rate would be low because the majority of globular clusters are old \citep{Rodriguez:2016big}.
 \end{enumerate} 
+
 
 \subsection{System Properties}
 \subsubsection{Masses}
